--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="image">
             <img src="poster.jpg" alt="Poster Microgreen" style="width: 80%; max-width: 496px;">
         </div>
-        <a href="https://+628153916132" class="button">Hubungi Penjual</a>
+        <a href="https://wa.me/+628153916132" class="button">Hubungi Penjual</a>
     </div>
     <div class="watermark">
         ©NexoGreenP5
