--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="content">
         <h1>Mendesain Produk Microgreen</h1>
         <ul>
-    <li><strong>Ketua Kelompok :</strong> Irwansyah Aidil Adha</li>
+    <li><strong>Ketua Kelompok :</strong> Farhat Bagas Imam Pratama</li>
       <li><strong>Tugas :</strong>Mendesain Produk Microgreen</li>
       <li><strong>Kelas:</strong>7.1 </li>
     <li><strong>Anggota Kelompok :</strong>
